syntax = "proto3";

package task.v1;

option go_package = "github.com/ramiqadoumi/go-task-flow/proto/task/v1;taskv1";

service TaskService {
  // Submit a task â€” returns immediately with task_id (fire-and-forget)
  rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);

  // Poll for a task's current status
  rpc GetTaskStatus(GetTaskStatusRequest) returns (TaskStatusResponse);

  // Stream live status updates until the task reaches a terminal state
  rpc StreamTaskUpdates(GetTaskStatusRequest) returns (stream TaskStatusResponse);

  // Submit multiple tasks in a single call (client-side streaming)
  rpc BulkSubmitTasks(stream SubmitTaskRequest) returns (BulkSubmitResponse);
}

message SubmitTaskRequest {
  string type         = 1;
  bytes  payload      = 2;
  int32  priority     = 3;
  int64  scheduled_at = 4; // Unix timestamp, 0 = immediate
}

message SubmitTaskResponse {
  string task_id    = 1;
  string status     = 2;
  int64  created_at = 3; // Unix timestamp
}

message GetTaskStatusRequest {
  string task_id = 1;
}

message TaskStatusResponse {
  string task_id      = 1;
  string type         = 2;
  string status       = 3;
  int32  attempts     = 4;
  int64  created_at   = 5;
  int64  completed_at = 6; // 0 if not yet complete
  int64  duration_ms  = 7;
  string error        = 8; // populated on failure
}

message BulkSubmitResponse {
  int32           submitted = 1;
  int32           failed    = 2;
  repeated string task_ids  = 3;
}
